test/Fail/Issue2386-c.err
Issue2386-c.agda:9.1-28: error: [InvalidBuiltin]
The type of BUILTIN EQUALITY must be a polymorphic relation
when checking the pragma BUILTIN EQUALITY Eq
